tests/baselines/reference/aliasErrors.errors.txt
==== tests/cases/compiler/aliasErrors.ts (12 errors) ====
    module foo {    
        export class Provide {
        }
        export module bar { export module baz {export class boo {}}}
    }
    
    import provide = foo;
    import booz = foo.bar.baz;
    import beez = foo.bar;
    
    import m = no;
    ~~~~~~~~~~~~~~
!!! aliasErrors.ts(11,1): error TS2072: Module cannot be aliased to a non-module type.
               ~~
!!! aliasErrors.ts(11,12): error TS2179: Unable to resolve module reference 'no'.
    import m2 = no.mod;
                ~~
!!! aliasErrors.ts(12,13): error TS2179: Unable to resolve module reference 'no'.
    import n = 5;
               ~
!!! aliasErrors.ts(13,12): error TS1003: Identifier expected.
    ~~~~~~~~~~
!!! aliasErrors.ts(13,1): error TS2072: Module cannot be aliased to a non-module type.
    import o = "s";
               ~~~
!!! aliasErrors.ts(14,12): error TS1003: Identifier expected.
    ~~~~~~~~~~
!!! aliasErrors.ts(14,1): error TS2072: Module cannot be aliased to a non-module type.
    import q = null;
               ~~~~
!!! aliasErrors.ts(15,12): error TS1006: Identifier expected; 'null' is a keyword.
    ~~~~~~~~~~
!!! aliasErrors.ts(15,1): error TS2072: Module cannot be aliased to a non-module type.
    import r = undefined;
    ~~~~~~~~~~~~~~~~~~~~~
!!! aliasErrors.ts(16,1): error TS2072: Module cannot be aliased to a non-module type.
               ~~~~~~~~~
!!! aliasErrors.ts(16,12): error TS2179: Unable to resolve module reference 'undefined'.
    
    
    var p = new provide.Provide();
    
    function use() {
        
      beez.baz.boo;
      var p1: provide.Provide; 
      var p2: foo.Provide;
      var p3:booz.bar;
                  ~~~
!!! aliasErrors.ts(26,15): error TS2094: The property 'bar' does not exist on value of type 'foo.bar.baz'.
      var p22 = new provide.Provide();
    }
    
    